Added links to card

--- a/src/styles/styles.modules.css
+++ b/src/styles/styles.modules.css
@@ -214,6 +214,7 @@ input:focus::-webkit-input-placeholder {
 .card__order-wrap {
   display: flex;
   align-items: center;
+  margin-bottom: 24px;
 }
 
 .card__order {
@@ -289,6 +290,10 @@ input:focus::-webkit-input-placeholder {
   -o-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 
   transition: background 0.2s ease;
+}
+
+.card__exit {
+  border: 1px solid gray;
 }
 
 /* MEDIA QUERIES */
